@@ -43,8 +43,8 @@ public class RandomNameUtils {
             //获取低位值
             lowPos = (161 + Math.abs(random.nextInt(93)));
             byte[] b = new byte[2];
-            b[0] = (new Integer(highPos).byteValue());
-            b[1] = (new Integer(lowPos).byteValue());
+            b[0] = Integer.valueOf(highPos).byteValue();
+            b[1] = Integer.valueOf(lowPos).byteValue();
             try {
                 //转成中文
                 str = new String(b, "GBK");
